#5  Method and request to return task by id